Fixed structure and layout, added hover effects, and fixed profile section spacing and button customization

--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .profile-image img {
     display: flex;
-    border: 12px solid rgb(23, 34, 23);
+    border: 12px solid rgb(45, 126, 95);
     border-radius: 100%;
     width: 250px;
     height: 250px;
@@ -43,44 +44,113 @@ body {
 
 .profile-user-settings {
     display: flex;
-    margin: 22px 20px;
+    margin: 22px 20px 12px;
+}
+
+.profile-user-name {
+    font-weight: lighter;
+    font-size: x-large;
 }
 
 .btn-profile-edit-btn {
     height: 20px;
-    margin: 16px 10px 0px 10px;
-    
+    margin: 20px 10px 0px 16px;
+    cursor: pointer;
+    background-color: #fafafa;
+    border-width: 1px;
+    border-radius: 3px;
+    padding: 2px 15px 2px 15px;
 }
 
 .btn-profile-settings-btn {
     height: 20px;
-    margin: 16px 0px 0px 0px;
+    margin: 20px 0px 0px 0px;
+    cursor: pointer;
+    background-color: white;
+    border-width: 0px;
 }
+
+
 
 ul {
     list-style-type: none;
     display: flex;
+    margin: ;
 }
 
 li {
     margin: 45px 10px;
 }
 
+.profile-stat-count {
+    font-weight: bold;
+    font-size: larger;
+}
+
 .profile-bio {
-    margin: 25px 0px 0px 0px;
+    font-size: larger;
+}
+
+.profile-real-name {
+    font-weight: bold;
 }
 
  .gallery {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: px;
-    width: 80%;
+    width: 800px;
+    gap: 20px;
     margin-right: auto;
     margin-left: auto;
+    cursor: pointer;
 }
 
-.gallery img {
+.gallery .gallery-image {
     width: 300px; 
-    height: 450px;
+    height: 400px;
     margin: 2px 2px;
+    object-fit: cover;
+}
+
+.gallery-item ul {
+    position: absolute;
+    top: 50%;
+    left: 42%;
+    transform: translate(-50%, -50%);
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    opacity: 0;
+    transition: opacity 0.15s ease;
+}
+
+.gallery-item {
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+
+.gallery-item .gallery-image {
+    
+    transition: filter 0.15s ease;
+}
+
+.gallery-item:hover .gallery-image {
+    filter: brightness(50%);
+}
+
+.gallery-item:hover ul {
+    opacity: 1;
+}
+
+.visually-hidden {
+    display: none;
+}
+
+.gallery-item-type .fa-video {
+    display: none;
+}
+
+.gallery-item-type .fa-clone {
+    display: none;
 }
